lab1/Test/L1-A-12-69.output
Error Type B at Line 3
Error Type B at Line 15
Error Type A at Line 35
Error Type A at Line 43
Error Type A at Line 47
Error Type A at Line 52
Error Type A at Line 54
