lab1/Test/L1-A-12-69.cmm
int ngN630kzNpu0 

struct {
  int tiHreXgP_QCYI ;
  int A7CWb0M5J9Bq2yctG ;
  int T ;
  int sFR , F ;
}yK08F7bM5EVLN4kN7 ( ) {
  float Y58bU59fnu [ 762399111 ] = Ldg8Ej && fgTU4T67NIkt 
    < Wz5xyjyGCOZNHdP62 - HGWrBbqINB36T7vr4 * ! - qsmYoX1 
    ( J6xFjp4HyTj7c9p = P || CpYq >= FIqWNRm9A05lJ + LIVK8kV2dT7Hn 
    [ xGZaL_KnRCxDJrbHjp2 <= DHeANjpKfW2Wlbso / - - ( 
    n3ZWL5 = YcT4qzAIT9A5 && NaL == c_9GDV - EiqzRHeTUDZ3vJvJ 
    * - S1Fwq [ bS9dj7mOLk != rjSruQe - E4ozkOyF2Qf / 
    ! WW4IRN6 ( D6ro7i , Tvv , Di3Paw_TJEoyQF > ) / 1795390617 
    ] - 1272886607.709230211 . bedgbQ3M9RYkjUy7d ) && 
    o0lFOCmde ( ) ] . BVWb / d2Dh0AB8MLvpnsl13 ) ;
}
int ;
int R3whz ( struct BW9XR6veooadC06dLiNo XBDOmlPhmd17F 
  ) {
  int im1 ;
  int fkYTeb ;
  if ( CC62Gf )   moT_tA ;
else   if ( NgTTdJ4 )   while ( TZdeaUhnINC_e )   return 
    lhLH1FLIUjCrBPmt0G ;



}
struct {
  int IErdo0G ;
  struct uWG9JeiZXNpbNySePka1 {
  }RjCFB5j ;
  int jpW_BJihVuyxlT ~;
};
int aF1qKnsq ( ) {
}
int CXwBZn8xlju60j , nXs9anQ 

;
int ;
int ;$
int ;
int ;
int S3b016T ( ) {
:  oDAo5KxkW ;
  AxTjckeiPv ;
  uMraQjmOxBLES3WV3xrq ;
  s7mHhRWY ;
  hqdmWgf ;
  wJoKxQCvOb9g54j ;^
  dRpswhtHi9Qv7WH0_Yt ;
  if ( IpvrYic51pOsIQ8UHC :)   if ( Pn1 )   mDJeC6Lmk40kV_NjWL 
    ;
else   QRkDbjgV0Ez ;


  if ( obHVNpQekrbHn ) {
  }
}
int HP9Ly ( int jHymyq , int PaXK ) {
}
